Apply new language features * enhanced switch * Objects.equals, String.isEmpty, String.contains etc
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>